[package]
name = "proof-comparison"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = { version = "0.17.0" }
tokio = { version = "1.17.0", features = ["full"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
