[package]
name = "proof-comparison"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
subxt = { version = "0.21.0" }
tokio = { version = "1.17.0", features = ["full"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
#sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
trie-db = "0.23.1"
